--- a/index.html
+++ b/index.html
@@ -2,56 +2,57 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formulário de Paciente</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img src="img/logotech.png" width="270" height="150" alt="Logo  TechSolutions">
-        <h1>TechSolutions</h1>
-        <h3>Serviços Tecnológicos</h3>
-        <hr>
-        <p>Empresa voltada para área tecnológica, focando apenas em soluções tecnológicas para pequenas e médias empresas.</p>
 
-    </header>
-
-    <main>
-        <section>
-            <p>
-                <h3>Nossos Serviços:</h3>
-                <ol>
-                    <li>Implatantação de sistemas de segurança.</li>
-                    <li>Instalações de software de pequena, média e alta tecnologia.</li>
-                    <li>Monitoramento de sistemas.</li>
-                    <li>Instalações de hardware e manutenções de micro.</li>
-                    <li>Entre outros serviços Tech...</li>
-        
-                </ol>                
-            </p>
-        </section>
-        <section>
-            <h3>Nossa Equipe:</h3>
-            <p>
-                <h4>Lucas Desterro - CEO</h4>- Definir visão e estratégia da empresa <br>- Liderar o a equipe e representar a TechSolutions ao público. <br>- Tomar decisões de alto nível e supervisionar as operações.
-            </p>
-            <p>
-                <h4>Fernanda Silva – CTO</h4>- Liderar o desenvolvimento de produtos e soluções tecnológicas. <br>- Coordenar as equipes de desenvolvimento, infraestrutura e inovação dos projetos. <br>- Garantir a aplicação das melhores práticas em tecnologia.
-            </p>
-        </section>
-        <section>
-            <h3>Contato</h3>
-            <ul>
-                <li>Telefone: (71) 40054141</li>
-                <li>E-mail.: <a href="Email.:">techsolutios@tecnologia.com</a></li>
-                <li>Localização: Wall Stret Empresarial - Av. Luís Viana Filho, 6462 - 41680-400 - Paralela, Salvador - BA, 41730-101<a href="https://www.google.com/maps/place/Wall+Street+Empresarial/@-12.9401285,-38.4152471,17z/data=!3m1!4b1!4m6!3m5!1s0x716110011d9173d:0x27fccb6cd4c3f8da!8m2!3d-12.9401285!4d-38.4126722!16s%2Fg%2F11x8cxppnm?entry=ttu&g_ep=EgoyMDI1MDUyMS4wIKXMDSoASAFQAw%3D%3D" target="_blank"> Google Maps</a> </li>
-                <li>Instagram: <a href="https://www.instagram.com/cursoemvideo/" target="_blank" rel="noopener noreferrer">TechSolutions</a></li>
-            </ul>
-        </section>
-    </main>
-    <footer>
+    <div class="ret">
+        <h1>PERFIL DO PACIENTE</h1>
         <hr>
-        <h6>UniJorge ADS 2025</h6>
-    </footer>
-    
+
+        <form action="">
+
+            <label for="nome">Nome do paciente:</label>
+            <input type="text" id="nome" name="nome">
+
+            <label for="consulta">Data e horário da 1ª consulta:</label>
+            <input type="datetime-local" id="consulta" name="consulta">
+
+            <p>Origem:</p>
+            <label><input type="radio" name="origem" value="Privado"> Privado</label>
+            <label><input type="radio" name="origem" value="SUS"> SUS</label>
+
+            <p>É acompanhado por algum farmacêutico em consultório?</p>
+            <label><input type="radio" name="farmaceutico" value="Sim"> Sim</label>
+            <label><input type="radio" name="farmaceutico" value="Nao"> Não</label>
+
+            <label for="nascimento">Data de nascimento:</label>
+            <input type="date" id="nascimento" name="nascimento">
+
+            <label for="idade">Idade:</label>
+            <input type="text" id="idade" name="idade" placeholder="Ex: 50 anos">
+
+            <label for="escolaridade">Escolaridade:</label>
+            <input type="text" id="escolaridade" name="escolaridade">
+
+            <label for="telefone">Telefone:</label>
+            <input type="tel" id="telefone" name="telefone" placeholder="(xx) xxxxx-xxxx">
+
+            <label for="moradia">Com quem mora?</label>
+            <input type="text" id="moradia" name="moradia">
+
+            <p>Limitações:</p>
+            <label><input type="checkbox" name="limitacoes[]" value="Nenhuma"> Nenhuma</label>
+            <label><input type="checkbox" name="limitacoes[]" value="Locomoção"> Locomoção</label>
+            <label><input type="checkbox" name="limitacoes[]" value="Visão"> Visão</label>
+            <label><input type="checkbox" name="limitacoes[]" value="Audição"> Audição</label>
+
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
+
 </body>
 </html>
